--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 Header set X-Frame-Options: DENY
 Header set X-Content-Type-Options: nosniff
-Header set X-XSS-Protection: 1; mode=block
+Header set X-XSS-Protection: "1; mode=block"
 
 # One year for image files
 <filesMatch ".(jpg|jpeg|png|gif|ico)$">
