--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-small-business.git"
     },
     "dependencies": {
+        "axios": ">=0.19.0",
         "bootstrap": "^4.3.1",
         "jquery": ">=3.4.0",
-        "lodash": ">=4.17.5",
-        "popper.js": "^1.15.0",
-        "axios": ">=0.19.0"
+        "lodash": "^4.17.15",
+        "popper.js": "^1.15.0"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.5",
+        "browser-sync": "^2.26.7",
         "gulp": "^4.0.2"
     }
 }
